<resources>
    <string name="app_name">LoginApp</string>
    <string name="text_Login">Login</string>
    <string name="text_user">User Name</string>
    <string name="text_password">Password</string>
    <string name="text_new">First time here ?</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_fname">First Name</string>
    <string name="text_lname">Last Name</string>
    <string name="text_email">Email</string>
    <string name="text_confirm">Comfirm Password</string>
</resources>
